2002-06-24  Keith Seitz  <keiths@redhat.com>

	* mi-cmds.h (mi_execute_command): Add "extern".
	(mi_error_last_message): New function.
	* mi-main.c (mi_error_last_message): New function.
	* mi-interp.c (mi_event_handlers): New static global.
	(mi_interpreter_init): Don't install mi event handlers here.
	(mi_interpreter_resume): Install mi event handlers here.
	(mi_interpreter_exec): Don't actually switch interpreters.
	Update error messages.
	exec_proc will return <0 if an error occurs.

2002-06-19  Keith Seitz  <keiths@redhat.com>

	* mi-cmd-break.c (breakpoint_notify): Only query the breakpoint
	for user breakpoints.
	(mi_cmd_break_insert): Only reset event handlers for MI0 and MI1
	interpreters.
	(mi_cmd_break_watch): Reset uiout output to clear watchpoint
	query. This is only used for MI0 and MI1.

	* mi-console.h (mi_console_file_new): Add "quote" parameter.
	* mi_console.c (struct mi_console_file): Add "quote".
	(mi_console_file_new): Add "quote" parameter.
	(mi_console_raw_packet): Use the quote character specified in
	mi_console_file_new, instead of assuming it is '"'.

	* mi-interp.c (mi_event_channel): New channel for event notifications.
	(mi_interpreter_init): Make static.
	Set event handlers.
	(mi_interpreter_resume): Make static.
	Deal with MI version bump.
	(mi_interpreter_suspend): Make static.
	(mi_interpreter_delete): Ditto.
	(mi_do_one_event): Ditto.
	(mi_cmd_exec_continuation): Ditto.
	(mi_interp_query_hook): Ditto.
	(mi_interp_read_one_line_hook): Ditto.
	(_initialize_mi_interp): Create explicit mi1 interp.

	* mi-events.c (notify_event): New helper function.
	(mi_create_breakpoint, mi_modify_breakpoint, mi_delete_breakpoint,
	mi_create_tracepoint, mi_modify_tracepoint, mi_delete_tracepoint,
	mi_architecture_changed): New functions.

	* mi.h: Add declarations for mi_create_breakpoint, mi_modify_breakpoint,
	mi_delete_breakpoint, mi_create_tracepoint, mi_modify_tracepoint,
	mi_delete_tracepoint, mi_architecture_changed, mi_stdout, mi_stderr,